Incorporate the review suggestion to use @modules instead of --add-exports option while launching the test